# microstrain_3dmgx1_imu

./: CMakeLists.txt  README.md  package.xml
include/microstrain_3dmgx1_imu/: 3dmgx1.h
launch/: microstrain_3dmgx1.launch
microstrain_3dmgx1_imu/: CMakeLists.txt  COPYING.lib  package.xml
microstrain_3dmgx1_imu/include/microstrain_3dmgx1_imu/: 3dmgx1.h
microstrain_3dmgx1_imu/launch/: microstrain_3dmgx1.launch
microstrain_3dmgx1_imu/params/: params.yaml
microstrain_3dmgx1_imu/src/: 3dmgx1.cc  3dmgx1.cpp  imu_node.cpp
microstrain_3dmgx1_interfaces/: CMakeLists.txt  package.xml
microstrain_3dmgx1_interfaces/msg/: CalibrationType.msg
microstrain_3dmgx1_interfaces/srv/: PublishTf.srv  StopCalibrate.srv
msg/: CalibrationType.msg
params/: params.yaml
src/: 3dmgx1.cc  3dmgx1.cpp  imu_node.cc  imu_node.cpp
srv/: PublishTF.srv  StopCalibrate.srv
